--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+  <title>Great Idea! - Services</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
@@ -17,90 +17,117 @@
 <body>
 
 
-Services
-Product
-Vision
-Features
-About
-Contact
+  <nav>
+    <a href="services.html" class="">Services</a>
+    <a href="#" class="">Product</a>
+    <a href="#" class="">Vision</a>
+    <a href="#" class="">Features</a>
+    <a href="#" class="">About</a>
+    <a href="#" class="">Contact</a>
+   <a href="index.html"> <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+</nav>
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-
-
+<header class="serviceHeaderImage">
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+</header>
+<div class="serviceheaderDiv">
+<h2>Services</h2>
 
-Services
+<p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+</p>
+</div>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+<hr>
+
+<section class="AllServices">
+  <div class="service">
+<h2>Digital Design</h2>
+
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.</p>
+
+<button>Learn More</button>
+</div>
+
+<div class="service">
+<h2>UX / UI</h2>
+
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.</p>
+
+  <button>Learn More</button>
+
+</div>
+</section>
+<section class="mediaquery"> 
+  <div class="service">
+<h2>Digital Marketing</h2>
+
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.
+  </p>
+
+  <button>Learn More</button>
+</div>
+
+<div class="service">
+<h2>Web Development</h2>
+<p>
+  Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.</p>
+
+<button>Learn More</button>
+
+</div>
+</section>
+<section class="mediaquery">
+  <div class="service">
+<h2>iOS Development</h2>
+
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.</p>
+
+<button>Learn More</button>
+
+</div>
+<div class="service">
+<h2>Android Development</h2>
+
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.</p>
+
+<button>Learn More</button>
+</div>
+</section>
+<hr>
+<section>
+  <div>
+
+<h2>Some Facts About Our Services</h2>
+
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.</p>
 
 
-Digital Design
+<ul>
+  <br>
+  <li>Awesome thing</li>
+  <br>
+<li>Amazing thing</li>
+<br>
+<li>Cool thing</li>
+<br>
+<li>Great thing</li>
+</ul>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
+</div>
+<div>
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
+</div>
+</section>
+<Section>
 Copyright Great Idea! 2018
+</Section>
 
 </body>
 
