--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -17,97 +17,100 @@
 
 <body>
 
-  <nav>
-    <a href="services.html" class="">Services</a>
-    <a href="#" class="">Product</a>
-    <a href="#" class="">Vision</a>
-    <a href="#" class="">Features</a>
-    <a href="#" class="">About</a>
-    <a href="#" class="">Contact</a>
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  </nav>
+  <!-- Copy and paste your HTML from the first UI project here -->
+  <div id="home-page" <div class="container">
 
-  <header>
+    <nav class="navigation">
+      <a href="service.html">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
 
-    <div>
-      <h1>
-        Innovation
-        <br>
-        On
-        <br>
-        Demand
-      </h1>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
-      <button input="button">Get Started</button>
-    </div>
+    </nav>
 
-    <div>
-      <img src="img/header-img.png" alt="Image of a code snippet.">
-    </div>
+    <header>
+      <div class="two-column centered">
+        <h1>
+          Innovation</br>
+          On</br>
+          Demand</br>
+        </h1>
 
-  </header>
-  <hr>
+        <a href="#" class="button">Get Started</a>
+      </div>
 
-  <section>
-    <div>
-      <h2>Features</h2>
-      <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-      </p>
-    </div>
+      <div class="two-column">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
+    </header>
 
-    <div>
-      <h2> About
-      </h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-      </p>
-    </div>
+    <div class="black-line"></div>
 
-  </section>
-  <section>
-    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  </section>
+    <section class="top-content">
+      <div class="two-column">
+        <h3>Features</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis
+        </p>
+      </div>
 
-  <section>
-    <div>
-      <h2>Services</h2>
-      <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-      </p>
-    </div>
+      <div class="two-column">
+        <h3>About</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
 
-    <div>
-      <h2> Product
-      </h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-      </p>
-    </div>
-    <div>
-      <h2> Vision
-      </h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-      </p>
-    </div>
-  </section>
+    <section>
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    </section>
 
-  <hr>
+    <section class="bottom-content">
+      <div class="three-column">
+        <h3>Services</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
 
-  <footer>
-    <div>
-      Contact
-      <br>
-      123 Way 456 Street
-      <br>
-      Somewhere, USA
-      <br>
-      <br>
-      1 (888) 888-8888
-      <br>
-      <br>
-      sales@greatidea.io
-      <br>
-      <br>
-      <section>Copyright Great Idea! 2018</section>
-    </div>
-  </footer>
+      <div class="three-column">
+        <h3>Product</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+
+      <div class="three-column">
+        <h3>Vision</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
+
+    <div class="black-line"></div>
+
+    <section class="contact">
+      <h3>Contact</h3>
+      <address>
+        123 Way 456 Street</br>
+        Somewhere, USA</address>
+      <p>1 (888) 888-8888</br>
+        sales@greatidea.io</p>
+
+    </section>
+
+    <footer>
+      <p>Copyright Great Idea! 2018</p>
+    </footer>
+
+  </div>
+  </div>
 
 </body>
 
