Added link to services.html buttons

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -21,7 +21,7 @@
   <div id="home-page" <div class="container">
 
     <nav class="navigation">
-      <a href="service.html">Services</a>
+      <a href="services.html">Services</a>
       <a href="#">Product</a>
       <a href="#">Vision</a>
       <a href="#">Features</a>
@@ -40,7 +40,7 @@
           Demand</br>
         </h1>
 
-        <a href="#" class="button">Get Started</a>
+        <a href="services.html" class="button">Get Started</a>
       </div>
 
       <div class="two-column">
